Feature/996 997 1003 new language (#1014)
* 5 new languages

clarat-org/clarat#996
clarat-org/clarat#997
clarat-org/clarat#1003

* Gemfiles_back_to_clarat_base_master

clarat-org/clarat#996
clarat-org/clarat#997
clarat-org/clarat#1003

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -542,6 +542,11 @@ ar:
         wol: Wol
         zho: Zho
         zza: Zza
+        aar: Aar
+        ckb: Ckb
+        cus: Cus
+        msa: Msa
+        tig: Tig
       section:
         family: Family
         refugees: Refugees
@@ -770,6 +775,11 @@ ar:
         wol: لغة ولوفية - wɔlɔf
         zho: لغة صينية - 普通话 / 普通話
         zza: لغة زازاكية - Zazaki / Kırmancki
+        aar: 'لغة عفارية - Qafar-áf '
+        ckb: لهجة كردية سورانية - سۆرانی
+        cus: لغة ساهو - ሳሆኛ
+        msa: لغة ملايو – بهاس ملايو
+        tig: لغة تجرية - ትግሬ
     shariff:
       share_label: 
     single_search_result:
