--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -604,6 +604,11 @@ fa:
         wol: Wol
         zho: Zho
         zza: Zza
+        aar: Aar
+        ckb: Ckb
+        cus: Cus
+        msa: Msa
+        tig: Tig
       section:
         family: خانواده
         refugees: پناهندگان
@@ -848,6 +853,11 @@ fa:
         wol: ولفی - wɔlɔf
         zho: چینی - 普通话 / 普通話
         zza: دیملی -  Zazaki / Kırmancki
+        aar: 'زبان عفار - Qafar-áf '
+        ckb: 'سورانی - سۆرانی '
+        cus: Saho - ሳሆኛ
+        msa: زبان مالایی – بهاس ملايو
+        tig: زبان تیگره - ትግሬ
     shariff:
       share_label: تقسیم کردن
     single_search_result:
