--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -560,6 +560,11 @@ tr:
         wol: Wol
         zho: Zho
         zza: Zza
+        aar: Aar
+        ckb: Ckb
+        cus: Cus
+        msa: Msa
+        tig: Tig
       section:
         family: Family
         refugees: Refugees
@@ -779,6 +784,11 @@ tr:
         wol: Wolof - wɔlɔf
         zho: Çince - 普通话 / 普通話
         zza: Zazaca - Zazaki / Kırmancki
+        aar: 'Afar - Qafar-áf '
+        ckb: Soranice - سۆرانی
+        cus: Saho - ሳሆኛ
+        msa: Malayca – بهاس ملايو
+        tig: Tigre - ትግሬ
     shariff:
       share_label: 
     single_search_result:
